Completed alarm clock

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <div class="setButton">
             <button id="setBtn"> Set Alarm </button>
         </div>
+        <div class="allAlarm">
+
+        </div>
     </section>
         <div class="alarm-container"></div>
          <p class="made-by">
